--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
-
-
+    //springboot devtools
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
