--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@
 server.port=8081
 
 #devtools
-spring.devtools.livereload.enabled=true
+#livereload : jsp, css ?? ? ?? ?? ?? ?? ??
+#restart : ?? ???
+spring.devtools.livereload.enabled=true 
 spring.devtools.restart.enabled=false
