--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-# ?? ??(change port)
+# \uD3EC\uD2B8 \uBCC0\uACBD(change port)
 server.port=8081
 
 #devtools
-#livereload : jsp, css ?? ? ?? ?? ?? ?? ??
-#restart : ?? ???
+#livereload : jsp, css\uB4F1... \uB9AC\uC18C\uC2A4\uAC00 \uBCC0\uACBD\uB418\uBA74 \uBE0C\uB77C\uC6B0\uC800\uB97C \uC790\uB3D9\uC73C\uB85C \uC0C8\uB85C\uACE0\uCE68
+#restart : \uC790\uB3D9 \uC7AC\uC2DC\uC791
 spring.devtools.livereload.enabled=true 
 spring.devtools.restart.enabled=false
+
