view 경로 및 리소스 규칙 정의

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 # \uD3EC\uD2B8 \uBCC0\uACBD(change port)
 server.port=8085
 
+#view\uC640 \uAD00\uB828\uB41C \uB9AC\uC18C\uC2A4\uB97C \uCC3E\uAE30 \uC704\uD55C \uACBD\uB85C\uC640 \uADDC\uCE59 \uC815\uC758
+# view\uC758 \uACBD\uB85C \uC9C0\uC815
+spring.mvc.view.prefix=WEB-INF/views
+# view\uC758 \uD655\uC7A5\uC790 \uC9C0\uC815
+spring.mvc.view.suffix=.jsp
+
+
 #devtools
 #livereload : jsp, css\uB4F1... \uB9AC\uC18C\uC2A4\uAC00 \uBCC0\uACBD\uB418\uBA74 \uBE0C\uB77C\uC6B0\uC800\uB97C \uC790\uB3D9\uC73C\uB85C \uC0C8\uB85C\uACE0\uCE68
 #restart : \uC790\uB3D9 \uC7AC\uC2DC\uC791
