--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.mvc.view.suffix=.jsp
 spring.devtools.livereload.enabled=true 
 spring.devtools.restart.enabled=false
 
+# oracle set
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=scott
+spring.datasource.password=tiger
+
