--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
+#Mybatis mapper \uACBD\uB85C
+mybatis.mapper-locations:classpath:SqlMapper/*.xml
